# ediconv

./: .gitignore  CMakeLists.txt  EdiFile.cpp  EdiFile.h  SchemaFile.cpp  SchemaFile.h  common.cpp  common.h  edi2XmlProcessor.cpp  edi2XmlProcessor.h  getDependencies.sh  main.cpp  xml2EdiProcessor.cpp  xml2EdiProcessor.h  xml2MetaProcessor.cpp  xml2MetaProcessor.h
tests/: CMakeLists.txt  test_common.cpp  test_edi2xmlprocessor.cpp  test_edifile.cpp  test_schemafile.cpp  test_xml2EdiProcessor.cpp  test_xml2MetaProcessor.cpp
tests/testdata/: pricatSchema01.xml  pricatSchema02.xml  pricatSchema02.xsd  pricatTestFile01.edi  pricatTestFile01.xml  pricatTestFile02.edi  pricatTestFile03.edi
